# FlaskConstructicon

./: FlaskConstructicon.py  MANIFEST.in  README.md  pyproject.toml
source_files/: __init__.py  help.txt
src/: FlaskConstructicon.py  __main__.py
src/FlaskConstructicon/: __main__.py
src/FlaskConstructicon/resources/: __init__.py
src/FlaskConstructicon/resources/database_configs/: mysqlconnection.txt
src/FlaskConstructicon/resources/patterns/: CD_MVC.json
