[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "FlaskConstructicon"
version = "1.0.5"
authors = [
  { name="Stuart Yee", email="ki6fzb@gmail.com" },
]
description = "A package for building Flask Projects"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Stuart-Yee/FlaskConstructicon"
"Bug Tracker" = "https://github.com/Stuart-Yee/FlaskConstructicon"